# django-whiteboard

./: .gitignore  manage.py  pyproject.toml
django_whiteboard/: asgi.py  graphql_view.py  schema.py  settings.py  urls.py  wsgi.py
django_whiteboard/templates/: index.html
identity/: apps.py  schema.py
identity/migrations/: 0001_initial.py
utils/: decorators.py
web/: dump.rdb  package-lock.json  package.json  tsconfig.json
web/src/: apollo.tsx  convert.ts  handlers.ts  index.ts  index.tsx  types.ts
web/src/__generated__/: AuthQuery.ts  BoardQuery.ts  CreateBoardMutation.ts  LoginMutation.ts  RegMutation.ts  SetBoardPublicMutation.ts  ShareBoardByUsernameMutation.ts  UserDashboardQuery.ts  globalTypes.ts
web/src/components/: topNav.tsx
web/src/components/auth/: index.tsx  loginPage.tsx
web/src/components/board/: index.tsx  reactBoard.tsx  shareModal.tsx
web/src/components/user-dashboard/: index.tsx
web/src/lib/: board.ts  convert.ts  cursor.ts  handlers.ts  types.ts
web/src/lib/handlers/: DrawHandler.ts  MoveHandler.ts  SelectHandler.ts  index.ts
web/src/styles/: auth.scss  board.scss  index.scss  userDashboard.scss
whiteboard/: consumer.py  models.py  schema.py  views.py
whiteboard/migrations/: 0001_initial.py  0002_auto_20210719_0150.py  0003_board_public.py  0004_boarduser_role.py
