[tool.poetry]
name = "django-whiteboard"
version = "0.1.0"
description = ""
authors = ["shen <shen@shenli.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
django-extensions = "^3.1.3"
channels = "^3.0.3"
channels-redis = "^3.2.0"
graphene-django = ">=3.0.0b7"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}
ipython = "^7.25.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
